--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="hero-element">
-        <p>Hi, I am</p>
-        <h1 class="mb-5">Dilhani Seneviratne</h1>
-        <h2 class="mb-5">Front-End Developer, based in Australia</h2>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
-        <div>
-            <a href="#" class="btn btn-branding">Get Started</a>
+    <div class="hero-element text-center">
+        <div class="hero-content">
+            <p>Hi, my name is</p>
+            <h1 class="">Dilhani Seneviratne</h1>
+            <h2 class="mb-5">I'm a Front-End Developer, based in Australia</h2>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
+            <div>
+                <a href="#" class="btn hero-btn-branding">
+                    <i class="fas fa-angle-double-down"></i>
+                </a>
+            </div>
         </div>
     </div>
 </body>
