--- a/index.html
+++ b/index.html
@@ -15,15 +15,42 @@
 <body>
     <div class="hero-element text-center">
         <div class="hero-content">
-            <p>Hi, my name is</p>
+            <p>Hello, my name is</p>
             <h1 class="">Dilhani Seneviratne</h1>
             <h2 class="mb-5">I'm a Front-End Developer, based in Australia</h2>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
             <div>
-                <a href="#" class="btn hero-btn-branding">
+                <a href="index.html#homepage-content" class="btn hero-btn-branding mt-4">
                     <i class="fas fa-angle-double-down"></i>
                 </a>
             </div>
+        </div>
+    </div>
+    <div class="main-body" id="homepage-content">
+        <div class="main-body-content">
+            <h2>Welcome!</h2> 
+            <p>It's nice to meet you. Thank you for visiting my online portfolio. 
+                <br>
+                <br>
+                My name is <strong>Dilhani</strong>. I am a budding web developer with a focus on Front-End Development, currently based in <strong>Adelaide, Australia</strong>. 
+                <br>
+                <br>
+                I started my official coding journey in 2022 by joining the SheCodes community. Since then, I have been consistently working on project/designs to further improve my coding skills. 
+                <br>
+                <br>
+                Here are a few of the things that I have been trained on:
+                <br>
+                <br>
+                HTML | CSS | JAVASCRIPT | API'S | BOOTSTRAP | VS-CODE | GIT/GITHUB | NETLIFY | FLEXBOX | RESPONSIVE | SEO | REACT
+                </p>
+                <div class="homepage-buttons mt-5">
+                    <div class="homepage-about-button">
+                        <a href="#" class="btn btn-branding">ABOUT</a>
+                    </div>
+                    <div class="homepage-projects-button">
+                        <a href="#" class="btn btn-branding">PROJECTS</a>
+                    </div>
+                </div>
         </div>
     </div>
 </body>
