added about.html page with basic structure and content. linked about page to button on index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </p>
                 <div class="homepage-buttons mt-5">
                     <div class="homepage-about-button">
-                        <a href="#" class="btn btn-branding">ABOUT</a>
+                        <a href="/about.html" class="btn btn-branding">ABOUT</a>
                     </div>
                     <div class="homepage-projects-button">
                         <a href="#" class="btn btn-branding">PROJECTS</a>
