added headshot image. updated index responsive breakpoint. added responsiveness to about.html. .

--- a/about.html
+++ b/about.html
@@ -37,20 +37,56 @@
     </div>
     <div class="main-body" id="about-content">
         <div class="main-body-content">
-            <p>
-                I'm on a learning journey to become a professional developer. 
+            <div class="about-me-element">
+                <div class="about-me-container">
+                    <div class="row">
+                        <div class="col-lg">
+                            <p>
+                                I'm on a learning journey to become a professional developer. 
+                                <br>
+                                <br>
+                                I first had a glimpse of web development in 2011. Equipped with nothing but determination & Google, I was customising my Tumblr themes to fit the aesthetics & purpose of my blogs. These blogs are long gone, but my interest in coding was forever piqued, although I decided to pursue other endeavours. 
+                                <br>
+                                <br>
+                                Fast forward (almost) a decade later to 2020, COVID-19 rocked the globe, inner reflection is brought to the forefront for some of us, and I was left with no clear direction with what I wanted pursue in my life. I took this time for personal development; I reverse-engineered my life vision and combined it with skills and interests that I already have. I have a knack for problem-solving, I like building things, I like renovations; before & after's. I like design. At the epicentre of all these things was coding, front-end development to be precise. 
+                                <br>
+                                <br>
+                                Two years later, I discovered and immersed myself in the SheCodes workshops, and since October 2022 I have been learning HTML, CSS & Javascript while building real-life applications/projects. 
+                            </p>
+                        </div>
+                        <div class="col-lg">
+                            <img src="media/headshot.png" alt="" width="500px" class="head-shot img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills-element mt-5">
+                <h2>Skills & Technology</h2>
+                HTML | CSS | JAVASCRIPT | EDITOR: VS-CODE | CODE SANDBOX | CODEPEN | INVISION | FIGMA |  
                 <br>
-                I first had a glimpse of web development in 2011. Equipped with nothing but determination & Google, I was customising my Tumblr themes to fit the aesthetics & purpose of my blogs. These blogs are long gone, but my interest in coding was forever piqued, although I decided to pursue other endeavours. 
+                API | GIT/GITHUB | BOOTSTRAP | HOSTING: NETLIFY | FLEXBOX | TERMINAL | GRIDS | SEO | NPM | RESPONSIVE | FONTS | REACT | 
                 <br>
-                Fast forward (almost) a decade later to 2020, COVID-19 rocked the globe, inner reflection is brought to the forefront for some of us, and I was left with no clear direction with what I wanted pursue in my life. I took this time for personal development; I reverse-engineered my life vision and combined it with skills and interests that I already have. I have a knack for problem-solving, I like building things, I like renovations; before & after's. I like design. At the epicentre of all these things was coding, front-end development to be precise. 
                 <br>
-                Two years later, I discovered and immersed myself in the SheCodes workshops, and since October 2022 I have been learning HTML, CSS & Javascript while building real-life applications/projects. 
-            </p>
-            <h2>Skills & Technology</h2>
-            HTML | CSS | JAVASCRIPT | API'S | BOOTSTRAP | VS-CODE | GIT/GITHUB | NETLIFY | FLEXBOX | RESPONSIVE | SEO | REACT
-            <br>
-            <br>
-            <h2>CERTIFICATES</h2>
+            </div>
+            <div class="certificates-element mt-5">
+                <h2>CERTIFICATES</h2>
+                <div class="certificates-container">
+                    <div class="row">
+                        <div class="col-md">
+                            <img src="media/certificates/SC Basics.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md">
+                            <img src="media/certificates/SC Basics AO.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md">
+                            <img src="media/certificates/SC Plus.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-md">
+                            <img src="media/certificates/SC Plus AO.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
