--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
             <div class="homepage-buttons mt-5">
                 <div class="homepage-about-button">
-                    <a href="#" class="btn btn-branding">MY STORY</a>
+                    <a href="/about.html#about-me-element" class="btn btn-branding">MY STORY</a>
                 </div>
                 <div class="homepage-projects-button">
-                    <a href="#" class="btn btn-branding">TOOLS</a>
+                    <a href="/about.html#tools-element" class="btn btn-branding">TOOLS</a>
                 </div>
                 <div class="homepage-projects-button">
-                    <a href="#" class="btn btn-branding">CERTIFICATES</a>
+                    <a href="/about.html#certificates-element" class="btn btn-branding">CERTIFICATES</a>
                 </div>
             </div>
             <div>
@@ -37,7 +37,7 @@
     </div>
     <div class="main-body" id="about-content">
         <div class="main-body-content">
-            <div class="about-me-element">
+            <div class="about-me-element" id="about-me-element">
                 <div class="about-me-container">
                     <div class="row">
                         <div class="col-lg">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="skills-element mt-5">
+            <div class="tools-element mt-5" id="tools-element">
                 <h2>Skills & Technology</h2>
                 HTML | CSS | JAVASCRIPT | EDITOR: VS-CODE | CODE SANDBOX | CODEPEN | INVISION | FIGMA |  
                 <br>
@@ -68,21 +68,21 @@
                 <br>
                 <br>
             </div>
-            <div class="certificates-element mt-5">
+            <div class="certificates-element mt-5" id="certificates-element">
                 <h2>CERTIFICATES</h2>
                 <div class="certificates-container">
                     <div class="row">
                         <div class="col-md">
-                            <img src="media/certificates/SC Basics.png" alt="" class="img-fluid">
+                            <img src="media/certificates/SC Basics.png" alt="" class="certificates img-fluid">
                         </div>
                         <div class="col-md">
-                            <img src="media/certificates/SC Basics AO.png" alt="" class="img-fluid">
+                            <img src="media/certificates/SC Basics AO.png" alt="" class="certificates img-fluid">
                         </div>
                         <div class="col-md">
-                            <img src="media/certificates/SC Plus.png" alt="" class="img-fluid">
+                            <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
                         </div>
-                        <div class="col-md">
-                            <img src="media/certificates/SC Plus AO.png" alt="" class="img-fluid">
+                        <div class="col-md mb-5" >
+                            <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
                         </div>
                     </div>
                 </div>
