--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div>
-                <a href="/about.html#about-content" class="btn hero-btn-branding mt-4">
+                <a href="/index.html#about-content" class="btn hero-btn-branding mt-4">
                     <i class="fas fa-angle-double-down"></i>
                 </a>
             </div>
