cleaned up responsiveness & margins

--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
                 </div>
             </div>
             <div>
-                <a href="/index.html#about-content" class="btn hero-btn-branding mt-4">
+                <a href="/about.html#about-content" class="btn hero-btn-branding mt-4">
                     <i class="fas fa-angle-double-down"></i>
                 </a>
             </div>
         </div>
     </div>
-    <div class="main-body" id="about-content">
+    <div class="main-body-element" id="about-content">
         <div class="main-body-content">
             <div class="about-me-element" id="about-me-element">
                 <div class="about-me-container">
