--- a/index.html
+++ b/index.html
@@ -26,23 +26,27 @@
             </div>
         </div>
     </div>
-    <div class="main-body" id="homepage-content">
+    <div class="main-body-element" id="homepage-content">
         <div class="main-body-content">
-            <h2>Welcome!</h2> 
-            <p>It's nice to meet you. Thank you for visiting my online portfolio. 
-                <br>
-                <br>
-                My name is <strong>Dilhani</strong>. I am a budding web developer with a focus on Front-End Development, currently based in <strong>Adelaide, Australia</strong>. 
-                <br>
-                <br>
-                I started my official coding journey in 2022 by joining the SheCodes community. Since then, I have been consistently working on project/designs to further improve my coding skills. 
-                <br>
-                <br>
-                Here are a few of the things that I have been trained on:
-                <br>
-                <br>
-                HTML | CSS | JAVASCRIPT | API'S | BOOTSTRAP | VS-CODE | GIT/GITHUB | NETLIFY | FLEXBOX | RESPONSIVE | SEO | REACT
+            <div>
+                <h2>Welcome!</h2>
+            </div>
+            <div class="welcome-message">
+                <p>It's nice to meet you. Thank you for visiting my online portfolio. 
+                    <br>
+                    <br>
+                    My name is <strong>Dilhani</strong>. I am a budding web developer with a focus on Front-End Development, currently based in <strong>Adelaide, Australia</strong>. 
+                    <br>
+                    <br>
+                    I started my official coding journey in 2022 by joining the SheCodes community. Since then, I have been consistently working on project/designs to further improve my coding skills. 
+                    <br>
+                    <br>
+                    Here are a few of the things that I have been trained on:
+                    <br>
+                    <br>
+                    HTML | CSS | JAVASCRIPT | API'S | BOOTSTRAP | VS-CODE | GIT/GITHUB | NETLIFY | FLEXBOX | RESPONSIVE | SEO | REACT
                 </p>
+            </div>
                 <div class="homepage-buttons mt-5">
                     <div class="homepage-about-button">
                         <a href="/about.html" class="btn btn-branding">ABOUT</a>
