added shecodes portal links for certificates. updated format of skills&tech content.

--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b80849d514.js" crossorigin="anonymous"></script>
     <title>About</title>
 </head>
@@ -29,7 +31,7 @@
                 </div>
             </div>
             <div>
-                <a href="/about.html#about-content" class="btn hero-btn-branding mt-4">
+                <a href="about.html#about-content" class="btn hero-btn-branding mt-4">
                     <i class="fas fa-angle-double-down"></i>
                 </a>
             </div>
@@ -60,29 +62,58 @@
                     </div>
                 </div>
             </div>
-            <div class="tools-element mt-5" id="tools-element">
+            <div class="tools-element" id="tools-element">
                 <h2>Skills & Technology</h2>
-                HTML | CSS | JAVASCRIPT | EDITOR: VS-CODE | CODE SANDBOX | CODEPEN | INVISION | FIGMA |  
-                <br>
-                API | GIT/GITHUB | BOOTSTRAP | HOSTING: NETLIFY | FLEXBOX | TERMINAL | GRIDS | SEO | NPM | RESPONSIVE | FONTS | REACT | 
-                <br>
-                <br>
+                <div class="tools-container">
+                    <div class="tools-row">
+                        <div>HTML</div>
+                        <div>CSS</div>
+                        <div>JAVASCRIPT</div>
+                        <div>EDITOR: VS-CODE</div>
+                        <div>CODE SANDBOX</div>
+                        <div>CODEPEN</div>
+                        <div>INVISION</div>
+                        <div>FIGMA</div>
+                        <div>API</div>
+                        <div>GIT/GITHUB</div>
+                    </div>
+                    <div class="tools-row">
+                        <div>BOOTSTRAP</div>
+                        <div>HOSTING: NETLIFY</div>
+                        <div>FLEXBOX</div>
+                        <div>TERMINAL</div>
+                        <div>GRIDS</div>
+                        <div>SEO</div>
+                        <div>NPM</div>
+                        <div>RESPONSIVE</div>
+                        <div>FONTS</div>
+                        <div>REACT</div>
+                    </div>
+                </div>
             </div>
-            <div class="certificates-element mt-5" id="certificates-element">
-                <h2>CERTIFICATES</h2>
+            <div class="certificates-element" id="certificates-element">
+                <h2>Certificates</h2>
                 <div class="certificates-container">
                     <div class="row">
                         <div class="col-md">
-                            <img src="media/certificates/SC Basics.png" alt="" class="certificates img-fluid">
+                            <a href="https://www.shecodes.io/certificates/5f90ae84a0ac050931f3d6c7d48b46e3" target="_blank">
+                                <img src="media/certificates/SC Basics.png" alt="" class="certificates img-fluid">
+                            </a>
                         </div>
                         <div class="col-md">
-                            <img src="media/certificates/SC Basics AO.png" alt="" class="certificates img-fluid">
+                            <a href="https://www.shecodes.io/certificates/4fd8ea8fc9a183deee00a1059ebc5871" target="_blank">
+                                <img src="media/certificates/SC Basics AO.png" alt="" class="certificates img-fluid">
+                            </a>
                         </div>
                         <div class="col-md">
-                            <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
+                            <a href="https://www.shecodes.io/certificates/f994a81e1e8122ecb9ed458dc031939c" target="_blank">
+                                <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
+                            </a>
                         </div>
                         <div class="col-md mb-5" >
+                            <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
                             <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
+                            </a>
                         </div>
                     </div>
                 </div>
