added the tools icons. tools layout reformatted.

--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="tools-element" id="tools-element">
+            <div class="tools-element-about" id="tools-element">
                 <h2>Skills & Technology</h2>
                 <div class="tools-container">
                     <div class="tools-row">
