--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>Welcome!</h2>
             </div>
             <div class="welcome-message">
-                <p>It's nice to meet you. Thank you for visiting my online portfolio. 
+                <p class="mb-5">It's nice to meet you. Thank you for visiting my online portfolio. 
                     <br>
                     <br>
                     My name is <strong>Dilhani</strong>. I am a budding web developer with a focus on Front-End Development, currently based in <strong>Adelaide, Australia</strong>. 
@@ -42,12 +42,61 @@
                     <br>
                     <br>
                     Here are a few of the things that I have been trained on:
-                    <br>
-                    <br>
-                    HTML | CSS | JAVASCRIPT | API'S | BOOTSTRAP | VS-CODE | GIT/GITHUB | NETLIFY | FLEXBOX | RESPONSIVE | SEO | REACT
                 </p>
+                <div class="tools-element-homepage">
+                        <div>
+                            <i class="fa-brands fa-html5"></i>
+                            <br>
+                            HTML</div>
+                        <div>
+                            <i class="fa-brands fa-css3-alt"></i>
+                            <br>
+                            CSS
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-square-js"></i>
+                            <br>
+                            JAVASCRIPT</div>
+                        <div>
+                            <i class="fa-solid fa-gears"></i>
+                            <br>
+                            API</div>
+                        <div>
+                            <i class="fa-brands fa-bootstrap"></i>
+                            <br>
+                            BOOTSTRAP</div>
+                        <div>
+                            <i class="fa-solid fa-code"></i>
+                            <br>
+                            VS CODE</div>
+                        <div>
+                            <i class="fa-brands fa-square-github"></i>
+                            <br>
+                            GIT/GITHUB</div>
+                        <div>
+                            <i class="fa-solid fa-server"></i>
+                            <br>
+                            NETLIFY</div>
+                        <div>
+                            <i class="fa-solid fa-box"></i>
+                            <br>
+                            FLEXBOX</div>
+                        <div>
+                            <i class="fa-solid fa-mobile-notch"></i>
+                            <br>
+                            RESPONSIVE</div>
+                        <div>
+                            <i class="fa-brands fa-google"></i>
+                            <br>
+                            SEO</div>
+                        <div>
+                            <i class="fa-brands fa-react"></i>
+                            <br>
+                            REACT</div>
+                    </div>
+                </div>
             </div>
-                <div class="homepage-buttons mt-5">
+                <div class="homepage-buttons">
                     <div class="homepage-about-button">
                         <a href="/about.html" class="btn btn-branding">ABOUT</a>
                     </div>
