--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <body>
     <div class="hero-element text-center">
         <div class="hero-content">
-            <p>Hello, my name is</p>
             <h1 class="">Dilhani Seneviratne</h1>
-            <h2 class="mb-5">I'm a Front-End Developer, based in Australia</h2>
+            <h2 class="mb-5">Front-End Developer, based in Australia</h2>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
             <div>
                 <a href="index.html#homepage-content" class="btn hero-btn-branding mt-4">
@@ -82,7 +81,7 @@
                             <br>
                             FLEXBOX</div>
                         <div>
-                            <i class="fa-solid fa-mobile-notch"></i>
+                            <i class="fa-solid fa-tablet"></i>
                             <br>
                             RESPONSIVE</div>
                         <div>
