removed 'hero element' from about page

--- a/about.html
+++ b/about.html
@@ -15,110 +15,96 @@
     <title>About</title>
 </head>
 <body>
-    <div class="hero-element text-center">
-        <div class="hero-content">
-            <h1 class="">About Me</h1>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
-            <div class="homepage-buttons mt-5">
-                <div class="homepage-about-button">
-                    <a href="/about.html#about-me-element" class="btn btn-branding">MY STORY</a>
+    <div class="hero-element-subpage">
+            <div class="hero-content-subpage">
+                <div>
+                    <h1 class="">About Me</h1>
                 </div>
-                <div class="homepage-projects-button">
-                    <a href="/about.html#tools-element" class="btn btn-branding">TOOLS</a>
-                </div>
-                <div class="homepage-projects-button">
-                    <a href="/about.html#certificates-element" class="btn btn-branding">CERTIFICATES</a>
-                </div>
-            </div>
-            <div>
-                <a href="about.html#about-content" class="btn hero-btn-branding mt-4">
-                    <i class="fas fa-angle-double-down"></i>
-                </a>
             </div>
         </div>
-    </div>
-    <div class="main-body-element" id="about-content">
-        <div class="main-body-content">
-            <div class="about-me-element" id="about-me-element">
-                <div class="about-me-container">
-                    <div class="row">
-                        <div class="col-lg">
-                            <p>
-                                I'm on a learning journey to become a professional developer. 
-                                <br>
-                                <br>
-                                I first had a glimpse of web development in 2011. Equipped with nothing but determination & Google, I was customising my Tumblr themes to fit the aesthetics & purpose of my blogs. These blogs are long gone, but my interest in coding was forever piqued, although I decided to pursue other endeavours. 
-                                <br>
-                                <br>
-                                Fast forward (almost) a decade later to 2020, COVID-19 rocked the globe, inner reflection is brought to the forefront for some of us, and I was left with no clear direction with what I wanted pursue in my life. I took this time for personal development; I reverse-engineered my life vision and combined it with skills and interests that I already have. I have a knack for problem-solving, I like building things, I like renovations; before & after's. I like design. At the epicentre of all these things was coding, front-end development to be precise. 
-                                <br>
-                                <br>
-                                Two years later, I discovered and immersed myself in the SheCodes workshops, and since October 2022 I have been learning HTML, CSS & Javascript while building real-life applications/projects. 
-                            </p>
-                        </div>
-                        <div class="col-lg">
-                            <img src="media/headshot.png" alt="" width="500px" class="head-shot img-fluid">
+        <div class="main-body-element-about" id="about-content">
+            <div class="main-body-content-about">
+                <div class="about-me-element" id="about-me-element">
+                    <div class="about-me-container">
+                        <div class="row">
+                            <div class="col-lg">
+                                <p>
+                                    I'm on a learning journey to become a professional developer. 
+                                    <br>
+                                    <br>
+                                    I first had a glimpse of web development in 2011. Equipped with nothing but determination & Google, I was customising my Tumblr themes to fit the aesthetics & purpose of my blogs. These blogs are long gone, but my interest in coding was forever piqued, although I decided to pursue other endeavours. 
+                                    <br>
+                                    <br>
+                                    Fast forward (almost) a decade later to 2020, COVID-19 rocked the globe, inner reflection is brought to the forefront for some of us, and I was left with no clear direction with what I wanted pursue in my life. I took this time for personal development; I reverse-engineered my life vision and combined it with skills and interests that I already have. I have a knack for problem-solving, I like building things, I like renovations; before & after's. I like design. At the epicentre of all these things was coding, front-end development to be precise. 
+                                    <br>
+                                    <br>
+                                    Two years later, I discovered and immersed myself in the SheCodes workshops, and since October 2022 I have been learning HTML, CSS & Javascript while building real-life applications/projects. 
+                                </p>
+                            </div>
+                            <div class="col-lg">
+                                <img src="media/headshot.png" alt="" width="500px" class="head-shot img-fluid">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="tools-element-about" id="tools-element">
-                <h2>Skills & Technology</h2>
-                <div class="tools-container">
-                    <div class="tools-row">
-                        <div>HTML</div>
-                        <div>CSS</div>
-                        <div>JAVASCRIPT</div>
-                        <div>EDITOR: VS-CODE</div>
-                        <div>CODE SANDBOX</div>
-                        <div>CODEPEN</div>
-                        <div>INVISION</div>
-                        <div>FIGMA</div>
-                        <div>API</div>
-                        <div>GIT/GITHUB</div>
-                    </div>
-                    <div class="tools-row">
-                        <div>BOOTSTRAP</div>
-                        <div>HOSTING: NETLIFY</div>
-                        <div>FLEXBOX</div>
-                        <div>TERMINAL</div>
-                        <div>GRIDS</div>
-                        <div>SEO</div>
-                        <div>NPM</div>
-                        <div>RESPONSIVE</div>
-                        <div>FONTS</div>
-                        <div>REACT</div>
+                <div class="tools-element-about" id="tools-element">
+                    <h2>Skills & Technology</h2>
+                    <div class="tools-container">
+                        <div class="tools-row">
+                            <div>HTML</div>
+                            <div>CSS</div>
+                            <div>JAVASCRIPT</div>
+                            <div>EDITOR: VS-CODE</div>
+                            <div>CODE SANDBOX</div>
+                            <div>CODEPEN</div>
+                            <div>INVISION</div>
+                            <div>FIGMA</div>
+                            <div>API</div>
+                            <div>GIT/GITHUB</div>
+                        </div>
+                        <div class="tools-row">
+                            <div>BOOTSTRAP</div>
+                            <div>HOSTING: NETLIFY</div>
+                            <div>FLEXBOX</div>
+                            <div>TERMINAL</div>
+                            <div>GRIDS</div>
+                            <div>SEO</div>
+                            <div>NPM</div>
+                            <div>RESPONSIVE</div>
+                            <div>FONTS</div>
+                            <div>REACT</div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="certificates-element" id="certificates-element">
-                <h2>Certificates</h2>
-                <div class="certificates-container">
-                    <div class="row">
-                        <div class="col-md">
-                            <a href="https://www.shecodes.io/certificates/5f90ae84a0ac050931f3d6c7d48b46e3" target="_blank">
-                                <img src="media/certificates/SC Basics.png" alt="" class="certificates img-fluid">
-                            </a>
-                        </div>
-                        <div class="col-md">
-                            <a href="https://www.shecodes.io/certificates/4fd8ea8fc9a183deee00a1059ebc5871" target="_blank">
-                                <img src="media/certificates/SC Basics AO.png" alt="" class="certificates img-fluid">
-                            </a>
-                        </div>
-                        <div class="col-md">
-                            <a href="https://www.shecodes.io/certificates/f994a81e1e8122ecb9ed458dc031939c" target="_blank">
-                                <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
-                            </a>
-                        </div>
-                        <div class="col-md mb-5" >
-                            <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
-                            <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
-                            </a>
+                <div class="certificates-element" id="certificates-element">
+                    <h2>Certificates</h2>
+                    <div class="certificates-container">
+                        <div class="row">
+                            <div class="col-md">
+                                <a href="https://www.shecodes.io/certificates/5f90ae84a0ac050931f3d6c7d48b46e3" target="_blank">
+                                    <img src="media/certificates/SC Basics.png" alt="" class="certificates img-fluid">
+                                </a>
+                            </div>
+                            <div class="col-md">
+                                <a href="https://www.shecodes.io/certificates/4fd8ea8fc9a183deee00a1059ebc5871" target="_blank">
+                                    <img src="media/certificates/SC Basics AO.png" alt="" class="certificates img-fluid">
+                                </a>
+                            </div>
+                            <div class="col-md">
+                                <a href="https://www.shecodes.io/certificates/f994a81e1e8122ecb9ed458dc031939c" target="_blank">
+                                    <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
+                                </a>
+                            </div>
+                            <div class="col-md mb-5" >
+                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
+                                    <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
 </html>
