--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="hero-element text-center">
-        <div class="hero-content">
+    <div class="hero-container-homepage text-center">
+        <div class="hero-content-homepage">
             <h1 class="">Dilhani Seneviratne</h1>
             <h2 class="mb-5">Front-End Developer, based in Australia</h2>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
             <div>
-                <a href="index.html#homepage-content" class="btn hero-btn-branding mt-4">
+                <a href="index.html#content-container" class="btn hero-btn-branding mt-4">
                     <i class="fas fa-angle-double-down"></i>
                 </a>
             </div>
         </div>
     </div>
-    <div class="main-body-element" id="homepage-content">
-        <div class="main-body-content">
+    <div class="content-container-homepage" id="content-container">
+        <div class="content-homepage">
             <div>
                 <h2>Welcome!</h2>
             </div>
@@ -95,11 +95,11 @@
                     </div>
                 </div>
             </div>
-                <div class="homepage-buttons">
-                    <div class="homepage-about-button">
+                <div class="buttons-homepage">
+                    <div class="about-button-homepage">
                         <a href="/about.html" class="btn btn-branding">ABOUT</a>
                     </div>
-                    <div class="homepage-projects-button">
+                    <div class="projects-button-homepage">
                         <a href="#" class="btn btn-branding">PROJECTS</a>
                     </div>
                 </div>
