renamed subpage classes generically

--- a/about.html
+++ b/about.html
@@ -15,17 +15,17 @@
     <title>About</title>
 </head>
 <body>
-    <div class="hero-element-subpage">
+    <div class="hero-container-subpage">
             <div class="hero-content-subpage">
                 <div>
                     <h1 class="">About Me</h1>
                 </div>
             </div>
         </div>
-        <div class="main-body-element-about" id="about-content">
-            <div class="main-body-content-about">
-                <div class="about-me-element" id="about-me-element">
-                    <div class="about-me-container">
+        <div class="content-container-subpage" id="about-container">
+            <div class="content-subpage">
+                <div class="about-content-container" id="about-content">
+                    <div class="about-content">
                         <div class="row">
                             <div class="col-lg">
                                 <p>
@@ -47,9 +47,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="tools-element-about" id="tools-element">
+                <div class="tools-container-subpage" id="tools-element-subpage">
                     <h2>Skills & Technology</h2>
-                    <div class="tools-container">
+                    <div class="tools-content">
                         <div class="tools-row">
                             <div>HTML</div>
                             <div>CSS</div>
@@ -76,9 +76,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="certificates-element" id="certificates-element">
+                <div class="certificates-container" id="certificates-container">
                     <h2>Certificates</h2>
-                    <div class="certificates-container">
+                    <div class="certificates-content">
                         <div class="row">
                             <div class="col-md">
                                 <a href="https://www.shecodes.io/certificates/5f90ae84a0ac050931f3d6c7d48b46e3" target="_blank">
