--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b80849d514.js" crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <title>Front-End Developer | Dilhani Seneviratne</title>
 </head>
 <body>
     <div class="hero-container-homepage text-center">
@@ -42,7 +42,7 @@
                     <br>
                     Here are a few of the things that I have been trained on:
                 </p>
-                <div class="tools-element-homepage">
+                <div class="tools-container-homepage">
                         <div>
                             <i class="fa-brands fa-html5"></i>
                             <br>
