created contact.html & projects.html pages. added the page structures.  added projects page link to homepage. minor css changes.

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 <body>
     <div class="hero-container-subpage">
             <div class="hero-content-subpage">
+                <div class="heading-about"></div>
                 <div>
                     <h1 class="">About Me</h1>
                 </div>
@@ -27,7 +28,7 @@
                 <div class="about-content-container" id="about-content">
                     <div class="about-content">
                         <div class="row">
-                            <div class="col-lg">
+                            <div class="col-lg-7">
                                 <p>
                                     I'm on a learning journey to become a professional developer. 
                                     <br>
@@ -41,7 +42,7 @@
                                     Two years later, I discovered and immersed myself in the SheCodes workshops, and since October 2022 I have been learning HTML, CSS & Javascript while building real-life applications/projects. 
                                 </p>
                             </div>
-                            <div class="col-lg">
+                            <div class="col-lg-5">
                                 <img src="media/headshot.png" alt="" width="500px" class="head-shot img-fluid">
                             </div>
                         </div>
