--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a href="/about.html" class="btn btn-branding">ABOUT</a>
                     </div>
                     <div class="projects-button-homepage">
-                        <a href="#" class="btn btn-branding">PROJECTS</a>
+                        <a href="/projects.html" class="btn btn-branding">PROJECTS</a>
                     </div>
                 </div>
         </div>
