added project images. added project display structure. adjusted css.

--- a/projects.html
+++ b/projects.html
@@ -24,12 +24,52 @@
         </div>
     </div>
     <div class="content-container-subpage" id="about-container">
-        <div class="content-subpage">
-            <div class="projects-container">
+        <div class="content-subpage text-center">
+            <div class="projects-content-container">
                 <div class="row">
-                    <div class="col-lg-4">Weather</div>
-                    <div class="col-lg-4">World Destination Clock</div>
-                    <div class="col-lg-4">Portfolio</div>
+                    <div class="col-lg-4 project-1">
+                        <img src="media/project-images/1.png" alt="" class="project-images img-fluid">
+                        <h2>World Destination Clock</h2>
+                        <p>
+                            This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
+                        </p>
+                        <p>
+                            HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
+                        </p>
+                        <div class="buttons-projects">
+                            <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                            <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="media/project-images/2.png" alt="" class="project-images img-fluid">
+                        <h2>Vanilla JS Weather App</h2>
+                        <p>
+                            This world-clock application displays the local time and date of select cities around the world, including your current location. 
+                        </p>
+                        <p>
+                            HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
+                        </p>
+                        <div class="buttons-projects">
+                            <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                            <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="media/project-images/3.png" alt="" class="project-images img-fluid">
+                        <h2>Portfolio</h2>
+                        <p>
+                            This is my online, responsive portfolio. 
+                            <p class="tag-line mt-2">(where you are right now!)</p>
+                        </p>
+                        <p>
+                            HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
+                        </p>
+                        <div class="buttons-projects">
+                            <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
+                            <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
