--- a/projects.html
+++ b/projects.html
@@ -28,14 +28,17 @@
             <div class="projects-content-container">
                 <div class="row">
                     <div class="col-lg-4 project-1">
-                        <img src="media/project-images/1.png" alt="" class="project-images img-fluid">
+                        <img src="media/project-images/1.png" alt="" class="project-images img-fluid d-none-md d-block ">
                         <h2>World Destination Clock</h2>
+                        <br />
                         <p>
                             This weather application allows you to check the current weather & 6-day forecast of any city in the world, including your current location.
                         </p>
+                        <br />
                         <p>
                             HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
                         </p>
+                        <br />
                         <div class="buttons-projects">
                             <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
                             <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
@@ -44,12 +47,15 @@
                     <div class="col-lg-4">
                         <img src="media/project-images/2.png" alt="" class="project-images img-fluid">
                         <h2>Vanilla JS Weather App</h2>
+                        <br />
                         <p>
                             This world-clock application displays the local time and date of select cities around the world, including your current location. 
                         </p>
+                        <br />
                         <p>
                             HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
                         </p>
+                        <br />
                         <div class="buttons-projects">
                             <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
                             <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
@@ -58,13 +64,17 @@
                     <div class="col-lg-4">
                         <img src="media/project-images/3.png" alt="" class="project-images img-fluid">
                         <h2>Portfolio</h2>
+                        <br />
                         <p>
                             This is my online, responsive portfolio. 
-                            <p class="tag-line mt-2">(where you are right now!)</p>
+                            <p class="tag-line">(where you are right now!)</p>
                         </p>
+                        <br />
                         <p>
                             HTML ・ CSS ・ FLEXBOX ・ BOOTSTRAP
                         </p>
+                        <br />
+                        <br />
                         <div class="buttons-projects">
                             <a href="http://"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
                             <a href="http://"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
