added contact page content. changed class name for some h2.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="content-container-homepage" id="content-container">
         <div class="content-homepage">
             <div>
-                <h2>Welcome!</h2>
+                <h2 class="subheading">Welcome!</h2>
             </div>
             <div class="welcome-message">
                 <p class="mb-5">It's nice to meet you. Thank you for visiting my online portfolio. 
