--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col-lg-4">
                         <img src="media/project-images/2.png" alt="" class="project-images img-fluid">
-                        <h2>Vanilla JS Weather App</h2>
+                        <h2 class="sub-subheading">Vanilla JS Weather App</h2>
                         <br />
                         <p>
                             This world-clock application displays the local time and date of select cities around the world, including your current location. 
