--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,20 @@
     </div>
     <div class="content-container-subpage" id="about-container">
         <div class="content-subpage">
+            <h2 class="subheading">Let's get in touch!</h2>
+            <p>I’m currently looking to join a new team of creative designers and developers. I'd love to hear from you!</p>
+            <div>
+                <h2 class="sub-subheading">/Email</h2>
+                <a href="mailto:dilhani.08@gmail.com" target="_blank">dilhani.08@gmail.com</a>
+            </div>
+            <div>
+                <h2 class="sub-subheading">/linkedIn</h2>
+                <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">Dilhani Seneviratne</a>
+            </div>
+            <div>
+                <h2 class="sub-subheading">/GitHub</h2>
+                <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
+            </div>
         </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
