--- a/contact.html
+++ b/contact.html
@@ -19,25 +19,27 @@
         <div class="hero-content-subpage">
             <div class="heading-about"></div>
             <div>
-                <h1 class="">Contact</h1>
+                <h1 class="">Contact Me</h1>
             </div>
         </div>
     </div>
     <div class="content-container-subpage" id="about-container">
         <div class="content-subpage">
-            <h2 class="subheading">Let's get in touch!</h2>
-            <p>I’m currently looking to join a new team of creative designers and developers. I'd love to hear from you!</p>
-            <div>
-                <h2 class="sub-subheading">/Email</h2>
-                <a href="mailto:dilhani.08@gmail.com" target="_blank">dilhani.08@gmail.com</a>
-            </div>
-            <div>
-                <h2 class="sub-subheading">/linkedIn</h2>
-                <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">Dilhani Seneviratne</a>
-            </div>
-            <div>
-                <h2 class="sub-subheading">/GitHub</h2>
-                <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
+            <h2 class="subheading mb-3">Let's get in touch!</h2>
+            <p class="mb-2">I’m currently looking to join a new team of creative designers and developers. I'd love to hear from you!</p>
+            <div class="contact-content-container">
+                <div>
+                    <h2 class="sub-subheading">/Email <i class="fa-solid fa-envelope"></i></h2>
+                    <a href="mailto:dilhani.08@gmail.com" target="_blank">dilhani.08@gmail.com</a>
+                </div>
+                <div>
+                    <h2 class="sub-subheading">/LinkedIn <i class="fa-brands fa-linkedin"></i></h2>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">Dilhani Seneviratne</a>
+                </div>
+                <div>
+                    <h2 class="sub-subheading">/GitHub <i class="fa-brands fa-square-github"></i></h2>
+                    <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
+                </div>
             </div>
         </div>
     </div>
