removed page height/width

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/b80849d514.js" crossorigin="anonymous"></script>
     <title>Contact | Dilhani Seneviratne</title>
 </head>
-<body>
+<body class="page-border">
     <div class="hero-container-subpage">
         <div class="hero-content-subpage">
             <div class="heading-about"></div>
