--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#">Contact</a>
             </div>
           </div>
         </div>
